--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -31,9 +31,14 @@
       <MenuItem Header="_Экспорт">
         <MenuItem Header="В excel" Command="{Binding Excel_Export}"/>
       </MenuItem>
-		</Menu>
+      <MenuItem Header="_Добавление">
+        <MenuItem Header="Test0" Command="{Binding AddTestForm0}"/>
+        <MenuItem Header="Test1" Command="{Binding AddTestForm1}"/>
+        <MenuItem Header="Test2" Command="{Binding AddTestForm2}"/>
+      </MenuItem>
+    </Menu>
     <Panel Margin="5,5,5,5" x:Name="MainPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-      <TabControl>
+      <TabControl SelectedIndex="{Binding FormModel_Local.ChooseTab}">
         <TabItem x:Name="Forms1" Header="Формы 1">
           <Panel x:Name="Forms_p1">
             <Grid>
