--- a/Client_App/Views/FormChangeOrCreate.axaml
+++ b/Client_App/Views/FormChangeOrCreate.axaml
@@ -2,17 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignHeight="300"
+        mc:Ignorable="d" d:DesignHeight="350" d:DesignWidth="550"
         x:Class="Client_App.Views.FormChangeOrCreate"
         xmlns:vm="using:Client_App.ViewModels"
-        Title="FormChangeOrCreate"
-        SizeToContent="Width">
-  <Design.DataContext>
-    <vm:ChangeOrCreateVM/>
-  </Design.DataContext>
-  <ScrollViewer>
-    <Panel Margin="10,10,10,10" x:Name="ChangingPanel" VerticalAlignment="Top" HorizontalAlignment="Left">
-      
-    </Panel>
-  </ScrollViewer>
+        Title="FormChangeOrCreate">
+  <Panel x:Name="ChangingPanel">
+
+  </Panel>
 </Window>
