--- a/Client_App/Controls/DataGrid/DataGrid.axaml
+++ b/Client_App/Controls/DataGrid/DataGrid.axaml
@@ -5,6 +5,12 @@
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="200"
              x:Class="Client_App.Controls.DataGrid.DataGrid">
   <Panel>
+    <Panel.ContextMenu>
+      <ContextMenu>
+        <MenuItem Header="Add Row" Command="{Binding AddRow}"/>
+        <MenuItem Header="Delete Row" Command="{Binding DeleteRow}"/>
+      </ContextMenu>
+    </Panel.ContextMenu>
     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
       <StackPanel Name="Columns" Orientation="Horizontal">
 
