--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -55,13 +55,13 @@
               </Grid.RowDefinitions>
               <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="Auto"></ColumnDefinition>
                   <ColumnDefinition></ColumnDefinition>
+                  <ColumnDefinition MaxWidth="450"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Panel x:Name="Forms_p2_0" Grid.Column="0"/>
                 <Panel x:Name="Forms_p2_B" Grid.Column="1"/>
               </Grid>
-              <Panel x:Name="Forms_p2_X" Grid.Row="1"/>
+              <Panel Margin="0,5,0,0" x:Name="Forms_p2_X" Grid.Row="1"/>
             </Grid>
           </Panel>
         </TabItem>
