--- a/Client_App/Controls/DataGrid/Cell.axaml
+++ b/Client_App/Controls/DataGrid/Cell.axaml
@@ -6,10 +6,11 @@
              x:Class="Client_App.Controls.DataGrid.Cell">
     <Border BorderThickness="1" BorderBrush="{Binding $parent.BorderBrush}">
         <Panel Background="Transparent">
-            <TextBox DataContext="{Binding}"
-                     Text="{Binding Value}"
-                     Background="Transparent"
-                     TextAlignment="Center" />
+          <TextBox DataContext="{Binding}"
+                   Text="{Binding Value}"
+                   Background="Transparent"
+                   TextAlignment="Center" >
+          </TextBox>
         </Panel>
     </Border>
 </UserControl>
