--- a/Client_App/Controls/DataGrid/Cell.axaml
+++ b/Client_App/Controls/DataGrid/Cell.axaml
@@ -4,13 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Client_App.Controls.DataGrid.Cell">
-    <Border BorderThickness="1" BorderBrush="{Binding $parent.BorderBrush}">
-        <Panel Background="Transparent">
-          <TextBox DataContext="{Binding}"
-                   Text="{Binding Value}"
-                   Background="Transparent"
-                   TextAlignment="Center" >
-          </TextBox>
-        </Panel>
-    </Border>
+  <Border BorderThickness="1" BorderBrush="{Binding $parent.BorderBrush}">
+    <Panel Background="Transparent">
+      <TextBox DataContext="{Binding}"
+               Text="{Binding Value}"
+               Background="Transparent"
+               TextAlignment="Center">
+        <TextBox.ContextMenu>
+          <ContextMenu Width="0" Height="0"/>
+        </TextBox.ContextMenu>
+      </TextBox>
+    </Panel>
+  </Border>
 </UserControl>
