--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -9,7 +9,7 @@
         x:Class="Client_App.Views.MainWindow"
         xmlns:Converters="using:Client_App.Converters"
         Icon="/Assets/avalonia-logo.ico"
-        Title="РАО"
+        Title="Интерактивное пособие по вводу данных"
         x:Name="MainWindow"
         Background="#D3D3D3">
 	<DockPanel>
