--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -19,6 +19,33 @@
             <MenuItem Header="_Импорт">
         <MenuItem Header="Из RAODB" Command="{Binding ImportForm}"/>
       </MenuItem>
+      <MenuItem Header="_Excel">
+        <MenuItem Header="Формы 1">
+          <MenuItem Header="Форма 1.1" Command="{Binding All_Excel_Export}" CommandParameter="1.1"></MenuItem>
+          <MenuItem Header="Форма 1.2" Command="{Binding All_Excel_Export}" CommandParameter="1.2"></MenuItem>
+          <MenuItem Header="Форма 1.3" Command="{Binding All_Excel_Export}" CommandParameter="1.3"></MenuItem>
+          <MenuItem Header="Форма 1.4" Command="{Binding All_Excel_Export}" CommandParameter="1.4"></MenuItem>
+          <MenuItem Header="Форма 1.5" Command="{Binding All_Excel_Export}" CommandParameter="1.5"></MenuItem>
+          <MenuItem Header="Форма 1.6" Command="{Binding All_Excel_Export}" CommandParameter="1.6"></MenuItem>
+          <MenuItem Header="Форма 1.7" Command="{Binding All_Excel_Export}" CommandParameter="1.7"></MenuItem>
+          <MenuItem Header="Форма 1.8" Command="{Binding All_Excel_Export}" CommandParameter="1.8"></MenuItem>
+          <MenuItem Header="Форма 1.9" Command="{Binding All_Excel_Export}" CommandParameter="1.9"></MenuItem>
+        </MenuItem>
+        <MenuItem Header="Формы 2">
+          <MenuItem Header="Форма 2.1" Command="{Binding All_Excel_Export}" CommandParameter="2.1"></MenuItem>
+          <MenuItem Header="Форма 2.2" Command="{Binding All_Excel_Export}" CommandParameter="2.2"></MenuItem>
+          <MenuItem Header="Форма 2.3" Command="{Binding All_Excel_Export}" CommandParameter="2.3"></MenuItem>
+          <MenuItem Header="Форма 2.4" Command="{Binding All_Excel_Export}" CommandParameter="2.4"></MenuItem>
+          <MenuItem Header="Форма 2.5" Command="{Binding All_Excel_Export}" CommandParameter="2.5"></MenuItem>
+          <MenuItem Header="Форма 2.6" Command="{Binding All_Excel_Export}" CommandParameter="2.6"></MenuItem>
+          <MenuItem Header="Форма 2.7" Command="{Binding All_Excel_Export}" CommandParameter="2.7"></MenuItem>
+          <MenuItem Header="Форма 2.8" Command="{Binding All_Excel_Export}" CommandParameter="2.8"></MenuItem>
+          <MenuItem Header="Форма 2.9" Command="{Binding All_Excel_Export}" CommandParameter="2.9"></MenuItem>
+          <MenuItem Header="Форма 2.10" Command="{Binding All_Excel_Export}" CommandParameter="2.10"></MenuItem>
+          <MenuItem Header="Форма 2.11" Command="{Binding All_Excel_Export}" CommandParameter="2.11"></MenuItem>
+          <MenuItem Header="Форма 2.12" Command="{Binding All_Excel_Export}" CommandParameter="2.12"></MenuItem>
+        </MenuItem>
+      </MenuItem>
     </Menu>
     <Panel Margin="5,5,5,5" x:Name="MainPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
       <TabControl SelectedIndex="{Binding FormModel_Local.ChooseTab}">
