--- a/Client_App/Controls/DataGrid/Cell.axaml
+++ b/Client_App/Controls/DataGrid/Cell.axaml
@@ -6,7 +6,7 @@
              x:Class="Client_App.Controls.DataGrid.Cell"
              xmlns:local="clr-namespace:Client_App.Controls.DataGrid">
   <Border BorderThickness="1" BorderBrush="Black">
-    <Panel Background="Transparent" DataContext="{Binding $parent[local:Row].DataContext.Value}">
+    <Panel Background="Transparent" DataContext="{Binding $parent[local:Row].DataContext}">
       <TextBox
           Text="{Binding Value}"
           Background="Transparent"
