--- a/Client_App/Controls/DataGrid/Cell.axaml
+++ b/Client_App/Controls/DataGrid/Cell.axaml
@@ -10,7 +10,8 @@
       <TextBox
           Text="{Binding Value}"
           Background="Transparent"
-          TextAlignment="Center">
+          TextAlignment="Center"
+		 >
         <TextBox.ContextMenu>
           <ContextMenu Width="0" Height="0"/>
         </TextBox.ContextMenu>
