--- a/Client_App/Controls/DataGrid/CustomCell.axaml
+++ b/Client_App/Controls/DataGrid/CustomCell.axaml
@@ -3,10 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Client_App.Controls.DataGrid.CustomCell">
+             x:Class="Client_App.Controls.DataGrid.CustomCell"
+			 xmlns:local="clr-namespace:Client_App.Controls.DataGrid">
     <Border BorderThickness="1" BorderBrush="{Binding $parent.BorderBrush}">
-        <Panel Background="Transparent">
-          
-        </Panel>
+        <Panel Background="Transparent" DataContext="{Binding $parent[local:Row].DataContext}"></Panel>
     </Border>
 </UserControl>
