--- a/Client_App/Controls/DataGrid/DataGrid.axaml
+++ b/Client_App/Controls/DataGrid/DataGrid.axaml
@@ -3,5 +3,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="200"
-             x:Class="Client_App.Controls.DataGrid.DataGrid">
+             x:Class="Client_App.Controls.DataGrid.DataGrid"
+			 x:TypeArguments="x:String,x:Int32">
 </UserControl>
