--- a/Client_App/Controls/DataGrid/DataGridRow.axaml
+++ b/Client_App/Controls/DataGrid/DataGridRow.axaml
@@ -3,11 +3,5 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Client_App.Controls.DataGrid.Cell"
-			 xmlns:local="clr-namespace:Client_App.Controls.DataGrid">
-	<Border BorderThickness="1" BorderBrush="{Binding $parent.BorderColor}">
-		<Panel Background="{Binding $parent.Background}" DataContext="{Binding $parent[DataGridRow].DataContext}">
-
-		</Panel>
-	</Border>
+             x:Class="Client_App.Controls.DataGrid.DataGridRow">
 </UserControl>
