--- a/Client_App/Controls/DataGrid/Cell.axaml
+++ b/Client_App/Controls/DataGrid/Cell.axaml
@@ -1,13 +1,14 @@
-<UserControl xmlns="https://github.com/avaloniaui"
+<Cell xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Client_App.Controls.DataGrid.Cell"
-			 xmlns:local="clr-namespace:Client_App.Controls.DataGrid">
+			 xmlns:local="clr-namespace:Client_App.Controls.DataGrid"
+			 Row="{Binding $parent[DataGridRow].Row, Mode=TwoWay}">
 	<Border BorderThickness="1" BorderBrush="{Binding $parent.BorderColor}">
 		<Panel Background="{Binding $parent.Background}" DataContext="{Binding $parent[DataGridRow].DataContext}">
 
 		</Panel>
 	</Border>
-</UserControl>
+</Cell>
