--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -48,7 +48,7 @@
     <Panel Margin="5,5,5,5" x:Name="MainPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
       <TabControl SelectedIndex="{Binding FormModel_Local.ChooseTab}">
         <TabItem x:Name="Forms1" Header="Формы 1">
-          <Panel x:Name="Forms_p1" VerticalAlignment="Stretch" >
+          <Panel x:Name="Forms_p1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid>
               <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" MinHeight="200"></RowDefinition>
@@ -56,22 +56,22 @@
               </Grid.RowDefinitions>
               <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="890"></ColumnDefinition>
-                  <ColumnDefinition ></ColumnDefinition>
+                  <ColumnDefinition Width="3*"></ColumnDefinition>
+                  <ColumnDefinition Width="1.5*" ></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <ScrollViewer>
-                  <Panel x:Name="Forms_p1_0" Grid.Column="0">
+                  <Panel x:Name="Forms_p1_0" HorizontalAlignment="Stretch" Grid.Column="0">
 				  </Panel>
                 </ScrollViewer>
-                <Panel x:Name="Forms_p1_B" Grid.Column="1"/>
+                <Panel x:Name="Forms_p1_B" HorizontalAlignment="Stretch"  Grid.Column="1"/>
               </Grid>
-              <Panel Margin="0,5,0,0" x:Name="Forms_p1_X" VerticalAlignment="Stretch" Grid.Row="1">
+              <Panel Margin="0,5,0,0" x:Name="Forms_p1_X" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="1">
 	          </Panel>  
             </Grid>
           </Panel>
         </TabItem>
         <TabItem x:Name="Forms2" Header="Формы 2">
-          <Panel x:Name="Forms_p2" VerticalAlignment="Stretch">
+          <Panel x:Name="Forms_p2" VerticalAlignment="Stretch" >
             <Grid>
               <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" MinHeight="220"></RowDefinition>
