--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -18,6 +18,7 @@
         <MenuItem Header="Из RAODB" Command="{Binding ImportForm}"/>
       </MenuItem>
       <MenuItem Header="_Excel" FontSize="14">
+		<MenuItem Header="Список форм 1" Command="{Binding AllForms1_Excel_Export}"></MenuItem>
         <MenuItem Header="Формы 1">
           <MenuItem Header="Форма 1.1" Command="{Binding All_Excel_Export}" CommandParameter="1.1"></MenuItem>
           <MenuItem Header="Форма 1.2" Command="{Binding All_Excel_Export}" CommandParameter="1.2"></MenuItem>
