--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -21,7 +21,7 @@
       <MenuItem Header="_Excel" FontSize="14">
 		<MenuItem Header="Паспорта">
           <MenuItem Header="Отчеты без паспартов" Command="{Binding ExcelMissingPas}"></MenuItem>
-          <MenuItem Header="Паспорта без отчетов" Command="{Binding All_Excel_Export}"></MenuItem>
+          <MenuItem Header="Паспорта без отчетов" Command="{Binding ExcelPasWithoutRep}"></MenuItem>
         </MenuItem>  
 		<MenuItem Header="Список организаций" Command="{Binding AllOrganization_Excel_Export}"></MenuItem>
 		<MenuItem Header="Список форм 1" Command="{Binding AllForms1_Excel_Export}"></MenuItem>
