--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -22,6 +22,7 @@
 		<MenuItem Header="Паспорта">
           <MenuItem Header="Отчеты без паспартов" Command="{Binding ExcelMissingPas}"></MenuItem>
           <MenuItem Header="Паспорта без отчетов" Command="{Binding ExcelPasWithoutRep}"></MenuItem>
+          <MenuItem Header="Изменить расположение паспортов по умолчанию" Command="{Binding ChangePasDir}"></MenuItem>
         </MenuItem>  
 		<MenuItem Header="Список организаций" Command="{Binding AllOrganization_Excel_Export}"></MenuItem>
 		<MenuItem Header="Список форм 1" Command="{Binding AllForms1_Excel_Export}"></MenuItem>
@@ -52,6 +53,35 @@
           <MenuItem Header="Форма 2.11" Command="{Binding All_Excel_Export}" CommandParameter="2.11"></MenuItem>
           <MenuItem Header="Форма 2.12" Command="{Binding All_Excel_Export}" CommandParameter="2.12"></MenuItem>
         </MenuItem>
+		  <MenuItem Header="Выбранная организация">
+			  <MenuItem Header="Формы 1">
+				  <MenuItem Header="Все формы 1.х" Command="{Binding All_Excel_Export}" CommandParameter="OrgAll1"></MenuItem>
+				  <MenuItem Header="Форма 1.1" Command="{Binding All_Excel_Export}" CommandParameter="Org1.1"></MenuItem>
+				  <MenuItem Header="Форма 1.2" Command="{Binding All_Excel_Export}" CommandParameter="Org1.2"></MenuItem>
+				  <MenuItem Header="Форма 1.3" Command="{Binding All_Excel_Export}" CommandParameter="Org1.3"></MenuItem>
+				  <MenuItem Header="Форма 1.4" Command="{Binding All_Excel_Export}" CommandParameter="Org1.4"></MenuItem>
+				  <MenuItem Header="Форма 1.5" Command="{Binding All_Excel_Export}" CommandParameter="Org1.5"></MenuItem>
+				  <MenuItem Header="Форма 1.6" Command="{Binding All_Excel_Export}" CommandParameter="Org1.6"></MenuItem>
+				  <MenuItem Header="Форма 1.7" Command="{Binding All_Excel_Export}" CommandParameter="Org1.7"></MenuItem>
+				  <MenuItem Header="Форма 1.8" Command="{Binding All_Excel_Export}" CommandParameter="Org1.8"></MenuItem>
+				  <MenuItem Header="Форма 1.9" Command="{Binding All_Excel_Export}" CommandParameter="Org1.9"></MenuItem>
+			  </MenuItem>
+			  <MenuItem Header="Формы 2">
+				  <MenuItem Header="Все формы 2.х" Command="{Binding All_Excel_Export}" CommandParameter="OrgAll2"></MenuItem>
+				  <MenuItem Header="Форма 2.1" Command="{Binding All_Excel_Export}" CommandParameter="Org2.1"></MenuItem>
+				  <MenuItem Header="Форма 2.2" Command="{Binding All_Excel_Export}" CommandParameter="Org2.2"></MenuItem>
+				  <MenuItem Header="Форма 2.3" Command="{Binding All_Excel_Export}" CommandParameter="Org2.3"></MenuItem>
+				  <MenuItem Header="Форма 2.4" Command="{Binding All_Excel_Export}" CommandParameter="Org2.4"></MenuItem>
+				  <MenuItem Header="Форма 2.5" Command="{Binding All_Excel_Export}" CommandParameter="Org2.5"></MenuItem>
+				  <MenuItem Header="Форма 2.6" Command="{Binding All_Excel_Export}" CommandParameter="Org2.6"></MenuItem>
+				  <MenuItem Header="Форма 2.7" Command="{Binding All_Excel_Export}" CommandParameter="Org2.7"></MenuItem>
+				  <MenuItem Header="Форма 2.8" Command="{Binding All_Excel_Export}" CommandParameter="Org2.8"></MenuItem>
+				  <MenuItem Header="Форма 2.9" Command="{Binding All_Excel_Export}" CommandParameter="Org2.9"></MenuItem>
+				  <MenuItem Header="Форма 2.10" Command="{Binding All_Excel_Export}" CommandParameter="Org2.10"></MenuItem>
+				  <MenuItem Header="Форма 2.11" Command="{Binding All_Excel_Export}" CommandParameter="Org2.11"></MenuItem>
+				  <MenuItem Header="Форма 2.12" Command="{Binding All_Excel_Export}" CommandParameter="Org2.12"></MenuItem>
+			  </MenuItem>
+		  </MenuItem>
       </MenuItem>
     </Menu>
     <Panel Margin="5,5,5,5" x:Name="MainPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
