--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -55,7 +55,6 @@
         </MenuItem>
 		  <MenuItem Header="Выбранная организация">
 			  <MenuItem Header="Формы 1">
-				  <MenuItem Header="Все формы 1.х" Command="{Binding All_Excel_Export}" CommandParameter="OrgAll1"></MenuItem>
 				  <MenuItem Header="Форма 1.1" Command="{Binding All_Excel_Export}" CommandParameter="Org1.1"></MenuItem>
 				  <MenuItem Header="Форма 1.2" Command="{Binding All_Excel_Export}" CommandParameter="Org1.2"></MenuItem>
 				  <MenuItem Header="Форма 1.3" Command="{Binding All_Excel_Export}" CommandParameter="Org1.3"></MenuItem>
@@ -67,7 +66,6 @@
 				  <MenuItem Header="Форма 1.9" Command="{Binding All_Excel_Export}" CommandParameter="Org1.9"></MenuItem>
 			  </MenuItem>
 			  <MenuItem Header="Формы 2">
-				  <MenuItem Header="Все формы 2.х" Command="{Binding All_Excel_Export}" CommandParameter="OrgAll2"></MenuItem>
 				  <MenuItem Header="Форма 2.1" Command="{Binding All_Excel_Export}" CommandParameter="Org2.1"></MenuItem>
 				  <MenuItem Header="Форма 2.2" Command="{Binding All_Excel_Export}" CommandParameter="Org2.2"></MenuItem>
 				  <MenuItem Header="Форма 2.3" Command="{Binding All_Excel_Export}" CommandParameter="Org2.3"></MenuItem>
@@ -81,6 +79,7 @@
 				  <MenuItem Header="Форма 2.11" Command="{Binding All_Excel_Export}" CommandParameter="Org2.11"></MenuItem>
 				  <MenuItem Header="Форма 2.12" Command="{Binding All_Excel_Export}" CommandParameter="Org2.12"></MenuItem>
 			  </MenuItem>
+			  <MenuItem Header="Все формы" Command="{Binding SelectOrgExcelExport}"/>
 		  </MenuItem>
       </MenuItem>
     </Menu>
