--- a/Client_App/Controls/DataGrid/DataGrids/DataGridNote.axaml
+++ b/Client_App/Controls/DataGrid/DataGrids/DataGridNote.axaml
@@ -3,5 +3,5 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="200"
-             x:Class="Client_App.Controls.DataGrid.DataGridNote">
+             x:Class="Client_App.Controls.DataGrid.DataGrids.DataGridNote">
 </UserControl>
